Trying to fix timer cutoff error

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,9 +33,10 @@ button {
 }
 
 #timer {
+    display: block;
     font-family: digital-7;
     font-size: 7em;
-    line-height: normal;
+    line-height: 1.5;
     overflow: hidden;
     background-image:linear-gradient(70deg,#4B79A1,#283E51); /* Dark Sky Gradient */
     -webkit-background-clip: text;
